# x690

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.rst  changelog.html  genindex.html  glossary.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.cfg  setup.py  vulture-whitelist.py
.github/workflows/: ci-workflow.yml  codestyle.yml  docs.yml
_sources/: changelog.rst.txt  index.rst.txt
_sources/api/: modules.rst.txt  x690.rst.txt
api/: modules.html  x690.html
docs/: changelog.rst  conf.py  glossary.rst  index.rst
tests/: conftest.py  test_nocopy.py  test_prettyfier.py  test_rawbytes.py  test_types.py  test_util.py
x690/: __init__.py  exc.py  types.py  types.pyi  util.py
